tests/snapshots/presentation__response_response.snap
---
source: tests/presentation.rs
assertion_line: 223
expression: response
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
