tests/snapshots/presentation__response_response_obj.snap
---
source: tests/presentation.rs
assertion_line: 306
expression: response
---
redirect_uri: "http://localhost:3000/cb"
response_code: ~
